# Raid-Party

./: .gitignore  9SLICE_BUTTON_SYSTEM.md  BALANCE_PLAN.md  CMakeLists.txt  EARLY_ACCESS_ROADMAP.md  GOLD_ECONOMY_OVERHAUL.md  LEVELING_SYSTEM_PLAN.md  METRICS_TELEMETRY_PLAN.md  PixelPerfectPlan.md  RaidParty GDD v03.docx  RaidParty_DevPlan.md  RaidParty_Meta.sav  SYNERGIES.md  WEB_DEPLOY.md  settings.cfg  web_linkflags.txt
.opencode/plans/: METRICS_TELEMETRY.md  NEW_CARD_EFFECTS_SYNERGIES.md  NODE_SPRITES.md  PROCEDURAL_MAP_GEN.md  SYNERGY_DATA_DRIVEN_REDESIGN.md
.wrangler/cache/: wrangler-account.json
Builds/Web/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  RaidParty.data  RaidParty.html  RaidParty.js  RaidParty.wasm  build.ninja  shell.html
assets/art/: card.ase
assets/data/: areas.json  cards.json  classes.json  encounters.json  enemies.json  events.json  maps.json  relics.json  synergies.json
logs/: card_play_metrics.csv  card_reward_metrics.csv  combat_metrics.csv  death_metrics.csv  discard_metrics.csv  draft_metrics.csv  economy_metrics.csv  event_metrics.csv  level_up_metrics.csv  relic_metrics.csv  rest_metrics.csv  run_metrics.csv  shop_metrics.csv  telemetry_uploads.csv  tutorial_metrics.csv
raidparty-telemetry/lively-block-7e9d/: package-lock.json  package.json  wrangler.jsonc
scripts/: analyze_metrics.py  balance_report.py  dev-watch.ps1  validate_content.py
src/: assets.c  assets.h  constants.h  game.c  game.h  main.c
src/combat/: combat.c  combat.h  status.c  status.h
src/data/: area_defs.c  area_defs.h  card_defs.c  card_defs.h  content_loader.c  content_loader.h  encounter_defs.c  encounter_defs.h  enemy_defs.c  enemy_defs.h  event_defs.c  event_defs.h  synergy_defs.c  (+1 more)
tools/: map_editor.html
(+84 files in other folders)
